# planting-life-data

./: .gitignore  LICENSE  README.md  clear_calculated.sh  generate_all_sql.py  generate_file_cache_from_db.py  generate_images_csv.py  generate_images_sql.py  generate_plant_locations_csv.py  generate_plant_locations_csv_infile.py  generate_plants_csv.py  generate_plants_sql.py  generate_plants_table.py  image_picker.py  image_picker2.py  luigi.cfg  names_short.txt  pyproject.toml  requirements.txt
data/in/human-choices/: images.csv
data/in/locations/: README.txt
data/in/scientific-names/: all.txt  long.txt  short.txt
diffs/: diff.sh  table_to_csv.sh
tasks/: generate.py  lenient.py
tasks/datasources/: chatgpt.py  flickr.py  inaturalist.py  plantinglife.py  usda.py  wikipedia.py  wildflower.py
tasks/datasources/chatgpt/: __init__.py  chatgpt.py  conditions.py  details.py  ratings.py
tasks/datasources/usda/: location.py  usda.py
tasks/tables/images/: generate.py
tasks/tables/plant_zipcodes/: generate.py
tasks/tables/plants/: generate.py
tests/tasks/datasources/: test_chatgpt.py  test_usda.py  test_wildflower.py
